--- a/css/style.css
+++ b/css/style.css
@@ -25,9 +25,14 @@
     --darker-green:  rgb(5, 88, 2);
 }
 
+* {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
 #mapid { height: 180px; }
-
-
 
 html {
     font-size: 62.5%;
@@ -76,7 +81,7 @@ body {
     position: absolute;
     padding: 5px;
 }
-.buscar input{
+.buscar input {
     width: 0px;
     height: 40px;
     padding: 0 20px;
@@ -88,11 +93,11 @@ body {
     transition: all 0.6s ease;
 }
 
-.btn-buscar{
+.btn-buscar {
     position: absolute;
     top: 0;
     right: 0;
-    background: linear-gradient(to right, #38ef7d, #11998e); 
+    background: linear-gradient(to right, #38ef7d, #11998e);
     width: 55px;
     height: 55px;
     line-height: 55px;
@@ -103,11 +108,11 @@ body {
     cursor: pointer;
 }
 
-.buscar:hover input{
+.buscar:hover input {
     width: 300px;
 }
 
-.buscar input:focus{
+.buscar input:focus {
     width: 300px;
 }
 
@@ -134,30 +139,30 @@ body {
     height: 85px;
 }
 
-.enlaces-menu{
+.enlaces-menu {
     display: flex;
     padding: 0;
 }
 
-.enlaces-menu li{
+.enlaces-menu li {
     padding: 0 40px;
     list-style-type: none;
 }
 
-.enlaces-menu li a{
+.enlaces-menu li a {
     text-decoration: none;
     font-family: 'Oswald', sans-serif;
     font-size: 15px;
     color: #f3f3f3;
 }
 
-.enlaces-menu li:hover{
+.enlaces-menu li:hover {
     background-color: var(--darker-blue);
     list-style-type: none;
     transition: 0.3s;
 }
 
-.category-selector li a{
+.category-selector li a {
     padding-top: 7px;
     padding-bottom: 15px;
     padding-left: 15px;
@@ -169,11 +174,11 @@ body {
     font-size: 15px;
 }
 
-.eslogan{
+.eslogan {
     margin-bottom: 1rem;
 }
 
-.eslogan p{
+.eslogan p {
     padding: 0;
     margin-top: 0;
     margin-bottom: 0;
@@ -181,7 +186,7 @@ body {
     font-size: 60px;
 }
 
-.frase{
+.frase {
     margin-bottom: 2rem;
 }
 
@@ -215,28 +220,27 @@ body {
     font-family: 'Work Sans', sans-serif;
     font-size: 25px;
 }
+
 @keyframes muestraMenu{
     from{opacity: 0;}
     to{opacity: 1;}
 }
-.enlaces-menu.activado{
+
+.enlaces-menu.activado {
     display: flex;
-    animation: muestraMenu 350ms ease-in-out 
-    both;
+    animation: muestraMenu 350ms ease-in-out both;
 }
 
-.br-1.animado{
-    transform: rotate(-45deg) translate(-10px, 8px); 
-    
+.br-1.animado {
+    transform: rotate(-45deg) translate(-10px, 8px);
 }
 
-.br-2.animado{
+.br-2.animado {
     opacity: 0;
 }
 
-.br-3.animado{
+.br-3.animado {
     transform: rotate(45deg) translate(-10px,-8px);
-    ;
 }
 
 .footer {
@@ -246,14 +250,129 @@ body {
     color: var(--white);
     text-align: center;
 }
-/*DISPOSITIVOS MOVILES*/
+
+.container-search {
+    min-height: 90vh;
+    padding: 3rem;
+    display: flex;
+    flex-direction: row;
+}
+
+.searching-for {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+.search-filters {
+    width: 20rem;
+    height: auto;
+    padding: 1rem;
+    background-color: var(--white);
+    border-radius: 0.2rem;
+}
+
+.search-results {
+    padding-bottom: 1.5rem;
+}
+
+.search-query {
+    font-size: 1.3rem;
+}
+
+.search-n-results {
+    font-size: 1rem;
+    font-weight: normal;
+}
+
+.search-filters-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.search-filter {
+    padding-bottom: 1rem;
+}
+
+.filter-title {
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--black);
+}
+
+.filter-min-max {
+    display: inline;
+}
+
+.filter-checkbox {
+    display: flex;
+    flex-direction: column;
+}
+
+.filter-checkbox input {
+    vertical-align: middle;
+    margin: 0.4rem;
+}
+
+.filter-checkbox label {
+    font-size: 0.9rem;
+    vertical-align: middle;
+}
+
+input[type="checkbox"] {
+    zoom: 0.9;
+}
+
+.filter-input {
+    width: 40%;
+}
+
+.filter-input:hover {
+    outline: var(--light-grey) solid 1px;
+}
+
+.filter-input:active, .filter-input:focus {
+    outline: var(--blue-light) solid 1px;
+}
+
+.search-content {
+    width: 70%;
+    margin: 0 1rem;
+    padding: 1rem;
+    background-color: var(--main-bg);
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.search-content * {
+    width: auto;
+    border: var(--darker-grey) solid 1px;
+}
+
+.btn {
+    width: 100%;
+    background-color: var(--darker-blue);
+    outline: none;
+    cursor: pointer;
+    padding: 0.6rem;
+    color: var(--white);
+    font-size: 1rem;
+    font-weight: bold;
+    border: none;
+    transition: background-color 0.3s;
+}
+
+.btn:hover, .btn:active {
+    background-color: var(--blue-light);
+}
+
+/*DISPOSITIVOS MOVILES */
 
 @media (max-width:768px) {
-    body{
-        
+    body {
         background: var(--background-mobile) ;
     }
-    
+
     .container-body {
         min-height: 90vh;
         display: flex;
@@ -263,7 +382,7 @@ body {
         margin-top: 4rem;
     }
 
-    .boton-hum{
+    .boton-hum {
         display: block;
         position: absolute;
         top: 15px;
@@ -271,16 +390,16 @@ body {
         transition: 0.2s 0.1s;
     }
 
-    .boton-hum:hover{
+    .boton-hum:hover {
         transform: rotate(360deg);
     }
-    .navbar-conteiner{
+    .navbar-conteiner {
         flex-direction: column;
         align-items: flex-start;
         padding:25px 0;
     }
 
-    .enlaces-menu{
+    .enlaces-menu {
         flex-direction: column;
         justify-content: space-around;
         align-items: center;
@@ -292,7 +411,7 @@ body {
         opacity: 0;
     }
 
-    .enlaces-menu li{
+    .enlaces-menu li {
         width: 100%;
         text-align: center;
         padding: 20px;
@@ -300,7 +419,6 @@ body {
 }
 
 @media (min-width: 1024px) {
-
     .container {
         width: 1024px;
     }
@@ -316,23 +434,19 @@ body {
 }
 
 @media (min-width: 1280px) {
-
     .container {
         min-width: 1280px;
     }
-
 }
 
 @media (min-width: 1536px) {
     .container {
         min-width: 1536px;
     }
-
 }
 
 @media (min-width: 2000px) {
     .container {
         min-width: 2000px;
     }
-
 }
