Diseño responsivo para la vista de búsqueda

--- a/css/style.css
+++ b/css/style.css
@@ -254,9 +254,8 @@ body {
 
 .container-search {
     min-height: 90vh;
-    padding: 3rem;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
 }
 
 .searching-for {
@@ -265,11 +264,10 @@ body {
 }
 
 .search-filters {
-    width: 20rem;
+    width: 100%;
     height: max-content;
     padding: 1rem;
     background-color: var(--white);
-    border-radius: 0.2rem;
 }
 
 .search-results {
@@ -286,12 +284,17 @@ body {
 }
 
 .search-filters-list {
-    display: flex;
+    margin-top: 1rem;
+    display: none;
     flex-direction: column;
 }
 
 .search-filter {
     padding-bottom: 1rem;
+}
+
+.search-filters-more {
+    display: block;
 }
 
 .filter-title {
@@ -337,11 +340,11 @@ input[type="checkbox"] {
 
 .search-content {
     height: max-content;
-    width: 70%;
-    margin-left: 1rem;
+    width: auto;
     display: grid;
+    padding: 1rem;
     gap: 0.5rem;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+    grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .card-recipe {
@@ -419,8 +422,24 @@ input[type="checkbox"] {
     transition: background-color 0.3s;
 }
 
-.btn:hover, .btn:active {
+.btn:hover, .btn:active, .btn:focus {
     background-color: var(--blue-light);
+}
+
+.btn-text {
+    background-color: transparent;
+    outline: none;
+    cursor: pointer;
+    padding: 0;
+    font-size: 1rem;
+    font-weight: bold;
+    color: var(--darker-blue);
+    border: none;
+    transition: color 0.3s;
+}
+
+.btn-text:hover, .btn-text:active, .btn-text:focus {
+    color: var(--blue-light);
 }
 
 .text-red {
@@ -434,10 +453,6 @@ input[type="checkbox"] {
 /*DISPOSITIVOS MOVILES */
 
 @media (max-width:768px) {
-    body {
-        background: var(--background-mobile) ;
-    }
-
     .container-body {
         min-height: 90vh;
         display: flex;
@@ -483,6 +498,50 @@ input[type="checkbox"] {
     }
 }
 
+@media (min-width: 512px) {
+    .search-content {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+}
+
+@media (min-width: 768px) {
+    .container-search {
+        min-height: 90vh;
+        display: flex;
+        flex-direction: row;
+    }
+
+    .search-content {
+        padding: 0;
+        margin-left: 1rem;
+        width: 70%;
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
+
+    .search-filters {
+        position: relative;
+        width: 20rem;
+        height: max-content;
+        padding: 1rem;
+        background-color: var(--white);
+        border-radius: 0.2rem;
+    }
+
+    .search-filters-list {
+        margin-top: 0;
+        display: flex !important;
+        visibility: visible !important;
+    }
+
+    .search-filters-more {
+        display: none;
+    }
+
+    .container-search {
+        padding: 3rem;
+    }
+}
+
 @media (min-width: 1024px) {
     .container {
         width: 1024px;
@@ -496,11 +555,19 @@ input[type="checkbox"] {
         margin-left: 18rem;
         margin-top: 4rem;
     }
+
+    .search-content {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+    }
 }
 
 @media (min-width: 1280px) {
     .container {
         min-width: 1280px;
+    }
+
+    .search-content {
+        grid-template-columns: repeat(3, minmax(0, 1fr));
     }
 }
 
@@ -508,10 +575,18 @@ input[type="checkbox"] {
     .container {
         min-width: 1536px;
     }
+
+    .search-content {
+        grid-template-columns: repeat(4, minmax(0, 1fr));
+    }
 }
 
 @media (min-width: 2000px) {
     .container {
         min-width: 2000px;
+    }
+
+    .search-content {
+        grid-template-columns: repeat(5, minmax(0, 1fr));
     }
 }
