--- a/css/style.css
+++ b/css/style.css
@@ -575,7 +575,6 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: row;
     background-color: var(--white);
-    padding: 0.5rem;
 }
 
 .recipe-ingredient-quantity {
@@ -607,6 +606,7 @@ input[type="checkbox"] {
     display: none;
     height: 4.5rem;
     width: 7rem;
+    margin: 0.5rem 0;
     object-fit: cover;
     overflow: hidden;
     border-radius: 0.2rem;
