--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,11 @@
     margin-inline-end: 0px;
 }
 
+a {
+    all: unset;
+    cursor: pointer;
+}
+
 #mapid { height: 180px; }
 
 html {
@@ -356,7 +361,6 @@ input[type="checkbox"] {
     border: var(--light-grey) 1px solid;
     border-radius: 0.2rem;
     transition: border 0.3s;
-    cursor: pointer;
 }
 
 .card-recipe:hover {
@@ -370,23 +374,48 @@ input[type="checkbox"] {
     width: 100%;
     min-width: auto;
     min-height: auto;
+    border-radius: 0.2rem 0.2rem 0 0;
 }
 
 .card-recipe-time {
-    position: absolute;
     top: 0.5rem;
     right: 0.5rem;
+    text-align: right;
+}
+
+.card-recipe-share {
+    cursor: pointer;
+    outline: none;
+    border: none;
+    top: 0.5rem;
+    left: 0.5rem;
+    text-align: left;
+    transition: background-color 0.3s;
+}
+
+.card-recipe-share:hover {
+    background-color: var(--blue-light);
+}
+
+.card-recipe-time, .card-recipe-share {
+    position: absolute;
     width: max-content;
     display: flex;
     flex-direction: row;
     gap: 0.2rem;
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: rgba(0, 0, 0, 0.5);
     border-radius: 0.2rem;
     color: white;
     font-size: 0.8rem;
     font-weight: bold;
     padding: 0.25rem;
-    text-align: right;
+}
+
+.card-recipe-link {
+    flex-grow: 1;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
 }
 
 .card-recipe-text {
@@ -394,7 +423,6 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: column;
     padding: 0.5rem;
-    flex-grow: 1;
 }
 
 .card-recipe-title {
@@ -578,7 +606,7 @@ input[type="checkbox"] {
 }
 
 .recipe-ingredient-quantity {
-    width: 6rem;
+    width: 7rem;
     padding: 0.5rem;
     display: flex;
     flex-direction: column;
@@ -617,7 +645,7 @@ input[type="checkbox"] {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: 0 1rem;
+    padding: 0.25rem 0;
 }
 
 .recipe-ingredient-label {
@@ -766,12 +794,6 @@ input[type="checkbox"] {
         padding: 2rem;
         flex-direction: row;
     }
-
-    .recipe-ingredient-title {
-        font-size: 1.3rem;
-        line-height: 1.5rem;
-        color: var(--black);
-    }
 }
 
 @media (min-width: 1024px) {
@@ -792,12 +814,18 @@ input[type="checkbox"] {
         grid-template-columns: repeat(2, minmax(0, 1fr));
     }
 
-    .recipe-ingredient-quantity {
-        width: 7rem;
-    }
-
     .recipe-ingredient-img {
         display: block;
+    }
+
+    .recipe-ingredient-text {
+        padding: 0 1rem;
+    }
+
+    .recipe-ingredient-title {
+        font-size: 1.3rem;
+        line-height: 1.5rem;
+        color: var(--black);
     }
 }
 
