--- a/css/style.css
+++ b/css/style.css
@@ -369,7 +369,10 @@ button {
     cursor: pointer;
 }
 
-
+/* Mail event*/
+#eventSendMail{
+    opacity: 0;
+}
 
 /* Desktop */
 @media only screen and (min-width: 1080px) {
